--- a/css/main.css
+++ b/css/main.css
@@ -75,7 +75,19 @@ header h3 {
     bottom: 10px;
     left: 10px;
 }
-
+.container-number {
+    width: 30px;
+    height: 30px;
+    position: absolute;
+    top: 15px;
+    left: 15px;
+    border-radius: 50px;
+    background-color: rgb(86, 97, 160);
+    color: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 
 /* question-header images */
 .director-header-one {
